<resources>
    <string name="app_name">SCOS</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="return_str">Return</string>
    <string name="sign_up">Sign Up</string>

    <string name="menu_ordered">Ordered Food</string>
    <string name="menu_check_order">Check Orders</string>
    <string name="menu_request_service">Request Service</string>
    <string name="menu_start_update">Start Update</string>
    <string name="menu_stop_update">Stop Update</string>

    <string name="ordered">Ordered</string>
    <string name="disorder">Disorder</string>
    <string name="submit">Submit</string>
    <string name="pay">Pay</string>
</resources>
